# olamiz_backend

./: .gitignore  CLAUDE.md  NOTES.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d24cd502630_catalog_categories.py  2e09bc0e922c_geo_regions_cities_districts.py  4c803f8c6ddb_suppliers_supplier_supplier_private.py  7aa43a5c705f_suppliers_supplier_supplier_private.py  a7fe07680a40_geo_regions_cities_districts.py  a8923e926319_users_user_offer_acceptances.py  ba896676a847_catalog_listings_listing_photos_units.py
backend/app/: main.py  models.py  worker.py
backend/app/admin/: setup.py
backend/app/api/v1/: auth.py  catalog.py  deps.py  errors.py  me.py  router.py  schemas.py
backend/app/bot/: webhook.py
backend/app/core/: config.py  db.py  i18n.py  redis.py  sms.py  storage.py
backend/app/core/security/: __init__.py  jwt.py  otp.py
backend/app/domain/booking/: README.md
backend/app/domain/catalog/: README.md  models.py  ranking.py  service.py
backend/app/domain/checklists/: README.md
backend/app/domain/disputes/: README.md
backend/app/domain/geo/: README.md  models.py
backend/app/domain/notifications/: README.md
backend/app/domain/reviews/: README.md
backend/app/domain/suppliers/: README.md  models.py
backend/app/domain/users/: README.md  models.py  service.py
backend/app/seed/: __init__.py  __main__.py  categories.py  geo.py
backend/app/web/: router.py
backend/app/web/templates/: index.html
backend/tests/: conftest.py  test_auth_api.py  test_catalog_api.py  test_categories.py  test_health.py  test_jwt.py  test_listings.py  test_otp.py  test_ranking.py  test_storage.py
deploy/: .env.example  Dockerfile  docker-compose.yml
deploy/nginx/: default.conf
docs/: architecture.md  backend.md  decisions.md  design.md  frontend.md  product-spec.md
